Fix widget spacing and remove excess page title spacing

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -72,6 +72,9 @@
         .widget--zone-widget {
             margin-bottom: 0;
         }
-    }
 
+        .widget + .widget {
+            margin-top: 12px;
+        }
+    }
 }
